# leaguescheduler

./: .gitignore  LICENSE  Makefile  README.md  app.py  example_input.xlsx  main.py  pyproject.toml  requirements.txt  setup.py  timings.py
.github/workflows/: ci.yaml  publish-fasttps.yaml  publish.yaml
.streamlit/: config.toml
example/output/: LEAGUE A.xlsx  LEAGUE B.xlsx  stats.xlsx
example_output/: LEAGUE A.xlsx  LEAGUE B.xlsx  stats.xlsx
leaguescheduler/: __init__.py  constants.py  input_parser.py  league_scheduler.py  main.py  params.py  transportation_problem_solver.py  utils.py
tests/: test_oracle.py  utils.py
timings/: solutions.npz  timings.py  timings.txt  timings_base.txt
timings/old/: solutions.npz  timings.txt
