[project]
name = "leaguescheduler"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "click==8.1.7",
    "hungarian-algorithm==0.1.11",
    "ipykernel==6.29.4",
    "jupyter_client==8.6.2",
    "jupyter_core==5.7.2",
    "matplotlib==3.9.0",
    "munkres==1.1.4",
    "numpy==1.26.4",
    "openpyxl==3.1.3",
    "packaging==24.0",
    "pandas==2.2.2",
    "streamlit==1.35.0",
    "urllib3==2.2.1",
    "uvicorn==0.30.1",
    "XlsxWriter==3.2.0"
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
    "pytest>=8.3.4",
    "ipython==8.28.0",
]

[tool.ruff]
fix = true
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    # "F403", # unable to detect undefined names (for instance, because using star imports)
    # "F405", # star imports
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.pytest.ini_options]
filterwarnings = "ignore"
addopts = "--strict-config --strict-markers --ds=api.settings"
