[project]
name = "leaguescheduler"
version = "0.2.0"
description = "Generate optimal schedules for your time-relaxed double round-robin (2RR) sports leagues"
authors = [ { name = "Samuel Borms", email = "sam@desirdata.com" }]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.4",
    "jupyter_client>=8.6.2",
    "jupyter_core>=5.7.2",
    "matplotlib>=3.9.0",
    "numpy>=2.3.4",
    "openpyxl>=3.1.3",
    "packaging>=24.0",
    "pandas>=2.3.0",
    "streamlit>=1.54.0",
    "typer>=0.15.2",
    "urllib3>=2.2.1",
    "uvicorn>=0.30.1",
    "XlsxWriter>=3.2.0",
    "fasttps>=0.1.0",
]

[dependency-groups]
dev = [
    "maturin>=1.0",
    "ruff>=0.8.6",
    "pytest>=8.3.4",
    "ipython>=8.28.0",
    "snakeviz>=2.2.2",
    "munkres>=1.1.4",
]

[project.scripts]
2rr = "leaguescheduler.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["leaguescheduler"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    # "F403", # unable to detect undefined names (for instance, because using star imports)
    # "F405", # star imports
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.pytest.ini_options]
filterwarnings = "ignore"
addopts = "--strict-config --strict-markers --ds=api.settings"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
fasttps = { workspace = true }